--- a/starting/src/dashboard.html
+++ b/starting/src/dashboard.html
@@ -12,22 +12,34 @@
             <li><a href="/addproduct">Add Product</a></li>
         </ul>
     </nav>
-    <h1>Welcome user</h1>
-    <a href="/addproduct">Add Product</a>
+    <section>
+        <h1>Welcome user</h1>
+    </section>
+    <section>
+        <img src="./wall.jpg" alt="Wall image" style="width:100%;height:auto;">
+    </section>
+    <section>
+        <h2>Product List</h2>
+        <div id="product-list"></div>
+    </section>
+    <footer>
+        <p>&copy; 2024 My Node App</p>
+
+    </footer>
 </body>
 <script>
-    // Fetch product data and display it
-    fetch('/allproducts')
-        .then(response => response.json())
-        .then(data => {
-            const productList = document.createElement('ul');
-            data.forEach(product => {
-                const listItem = document.createElement('li');
-                listItem.textContent = `${product.name} - $${product.price} (Quantity: ${product.quantity})`;
-                productList.appendChild(listItem);
-            });
-            document.body.appendChild(productList);
-        })
-        .catch(error => console.error('Error fetching product data:', error));
-</script>
+            // Fetch product data and display it
+            fetch('/allproducts')
+                .then(response => response.json())
+                .then(data => {
+                    const productList = document.createElement('ul');
+                    data.forEach(product => {
+                        const listItem = document.createElement('li');
+                        listItem.textContent = `${product.name} - $${product.price} (Quantity: ${product.quantity})`;
+                        productList.appendChild(listItem);
+                    });
+                    document.getElementById('product-list').appendChild(productList);
+                })
+                .catch(error => console.error('Error fetching product data:', error));
+        </script>
 </html>
