--- a/starting/src/addproduct.html
+++ b/starting/src/addproduct.html
@@ -6,7 +6,7 @@
     <title>Add new product</title>
 </head>
 <body>
-    <form action="/addnew" method="POST">
+    <form action="/addnew" method="POST" enctype="multipart/form-data">
         <label for="name">Product Name:</label>
         <input type="text" id="name" name="name" required>
         <br>
@@ -15,6 +15,9 @@
         <br>
         <label for="quantity">Quantity:</label>
         <input type="number" id="quantity" name="quantity" required>
+        <br>
+        <label for="image">Product Image:</label>
+        <input type="file" id="image" name="image" required>
         <br>
         <button type="submit">Add Product</button>
     </form>
