--- a/testpad/regd/form.html
+++ b/testpad/regd/form.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>Register</h1>
-    <!-- form with name, age city course and marks  -->
-    <form action="/register" method="post">
+    <form action="/register" method="post" enctype="multipart/form-data">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br><br>
 
@@ -23,6 +22,9 @@
 
         <label for="marks">Marks:</label>
         <input type="number" id="marks" name="marks" required><br><br>
+
+        <label for="photo">Profile </label>
+        <input type="file" id="photo" name="photo" multiple required> <br><br>
 
         <input type="submit" value="Submit">
     </form>
